Arrow alignment issue

--- a/web/src/scenes/Explore/Article/style.scss
+++ b/web/src/scenes/Explore/Article/style.scss
@@ -792,8 +792,6 @@ section.whats-new {
             }
         }
         .slick-arrow{
-            height: 35px;
-            width: 35px;
             // background-position: 10px 32px;
             // background-color: rgba(0, 0, 0, 0.7);
             margin-top: -22px;
@@ -808,31 +806,30 @@ section.whats-new {
                 outline: none;
             }
             &.slick-prev{
-                left: 10px;
+                left: 0px;
                 // background-image: url('../../../assets/images/left-arrow-white.svg');
-                @media(max-width: 1440px){
-                    left: 10px;
-                }
                 &:hover{
                     border: none;
                 }
                 &:before{
-                    left: 10px;
-                    margin-left: -5px;
-                    margin-top: 3px;
+                    // left: 10px;
+                    // margin-left: -5px;
+                    // margin-top: 3px;
+                    content: none;
                 }
             }
             &.slick-next{
-                right: 10px;
+                right: 0px;
                 // background-image: url('../../../assets/images/right-arrow-white.svg');
                 &:hover{
                     border: none;
                 }
                 &:before{
-                    right: 10px;
-                    margin-right: -5px;
-                    margin-top: 2px;
-                    margin-left: 0px;
+                    // right: 10px;
+                    // margin-right: -5px;
+                    // margin-top: 2px;
+                    // margin-left: 0px;
+                    content: none;
                 }
             }
         }
