--- a/web/src/scenes/Explore/Festival/style.scss
+++ b/web/src/scenes/Explore/Festival/style.scss
@@ -52,8 +52,8 @@
             }
         }
         .slick-arrow{
-            height: 35px;
-            width: 35px;
+            // height: 35px;
+            // width: 35px;
             // background-position: 10px 32px;
             // background-color: rgba(0, 0, 0, 0.7);
             margin-top: -22px;
@@ -68,25 +68,24 @@
                 border-width: 0 0 8px 7px;
             }
             &.slick-prev{
-                left: 10px;
+                left: 0px;
                 // background-image: url('../../../assets/images/left-arrow-white.svg');
-                @media(max-width: 1440px){
-                    left: 10px;
-                }
                  &:before{
-                    left: 10px;
-                    margin-left: -5px;
-                    margin-top: 3px;
+                    // left: 10px;
+                    // margin-left: -5px;
+                    // margin-top: 3px;
+                    content: none
                 }
             }
             &.slick-next{
-                right: 10px;
+                right: 0px;
                 // background-image: url('../../../assets/images/right-arrow-white.svg');
                 &:before{
-                    right: 10px;
-                    margin-right: -5px;
-                    margin-top: 2px;
-                    margin-left: 0px;
+                    // right: 10px;
+                    // margin-right: -5px;
+                    // margin-top: 2px;
+                    // margin-left: 0px;
+                    content: none;
                 }
             }
         }
